# hermes-wechat-ilink

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  QUICK_START.md  README.md  __init__.py  __main__.py  auth_manager.py  install.sh  plugin-config.json  plugin.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  开始使用.md
.github/workflows/: python-publish.yml  python-tests.yml
examples/: basic_usage.py
hermes_wechat_ilink/: __init__.py  __main__.py  auth_manager.py  plugin.yaml  requirements-debian.txt  requirements.txt  wechat_client.py
