[metadata]
name = hermes-wechat-ilink
version = 0.1.0
author = liangminmx
author_email = liangminmx@users.noreply.github.com
description = Hermes Agent plugin for direct WeChat integration via Tencent's official iLink API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/liangminmx/hermes-wechat-ilink
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Communications :: Chat

[options]
packages = find:
install_requires =
    aiohttp>=3.9.0
    qrcode[pil]>=7.4.2
    pillow>=10.0.0
python_requires = >=3.8
include_package_data = True

[options.entry_points]
hermes.plugins =
    wechat-ilink = hermes_wechat_ilink:create_memory_provider

[flake8]
max-line-length = 88
exclude = .git,__pycache__,venv,build,dist
